fix export ,appcache remaining

--- a/src/index.htm
+++ b/src/index.htm
@@ -9,10 +9,10 @@
   </head>
   <body>
     <script type="text/javascript" src="l10n.js"></script>
-    <%= require('html-loader!./html/topbar.htm').default %> <%=
-    require('html-loader!./html/about.htm').default %> <%=
-    require('html-loader!./html/textbox.htm').default %> <%=
-    require('html-loader!./html/setting.htm').default %> <%=
-    require('html-loader!./html/google-analytics.htm').default %>
+    <%= require('html-loader!./html/topbar.htm').default %> 
+    <%= require('html-loader!./html/about.htm').default %> 
+    <%= require('html-loader!./html/textbox.htm').default %> 
+    <%= require('html-loader!./html/setting.htm').default %> 
+    <%= require('html-loader!./html/google-analytics.htm').default %>
   </body>
 </html>
