--- a/src/html/about.htm
+++ b/src/html/about.htm
@@ -1,6 +1,6 @@
 <div class="about active">
     <div class="container">
-    <h1>oTranscribe</h1>
+    <h1>oTranscribe test</h1>
 
     <p class="lead" data-l10n-id="lead">A free web app to take the pain out of transcribing recorded interviews.</p>
 
