--- a/src/index.htm
+++ b/src/index.htm
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-
+    <%= require('html-loader!./html/meta-tags.htm').default %>
     <link rel="stylesheet" href="style.css" />
     <link rel="prefetch" type="application/l10n" href="data.ini" />
   </head>
@@ -13,6 +13,7 @@
     <%= require('html-loader!./html/about.htm').default %> 
     <%= require('html-loader!./html/textbox.htm').default %> 
     <%= require('html-loader!./html/setting.htm').default %> 
+    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet">
     <%= require('html-loader!./html/google-analytics.htm').default %>
   </body>
 </html>
